--- a/src/app/surf-event/result-view/result-view.component.scss
+++ b/src/app/surf-event/result-view/result-view.component.scss
@@ -100,6 +100,22 @@
         color: $color-white;
         transform: translateY(-50%);
     }
+
+    &__placeholder {
+        text-align: center;
+        font-style: italic;
+        color: $color-grey-dark-2;
+        padding: 1rem;
+        border: 1px dashed $color-primary;
+        border-radius: 10px;
+        margin-top: 1rem;
+
+        @include respond(small) {
+            margin: .5rem auto;
+            min-width: 95%;
+            max-width: 95%;
+        }
+    }
 }
 
 .rider {
