Fix: Coming-Soon und QR-Code bei Result-View

--- a/src/app/surf-event/result-view/result-view.component.html
+++ b/src/app/surf-event/result-view/result-view.component.html
@@ -21,7 +21,7 @@
 </ng-container>
 
 
-<div (window:resize)="onResize($event)" class="relative-container">
+<div *ngIf="hasCompetitionStarted()" (window:resize)="onResize($event)" class="relative-container">
     <div class="result-container" *ngIf="!isLoading" (click)="unHighlightRider()">
         <div class="round" *ngFor="let round of competition.rounds">
             <h2 class="round__title">{{ getRoundLabel(round.id) | uppercase}}</h2>
@@ -121,3 +121,10 @@
 </div>
 
 
+<div *ngIf="!hasCompetitionStarted()" class="not-started">
+    <h2 class="not-started__message">Stay tuned, this competition is <span class="underline">about to start pretty soon!</span></h2>
+    <div class="not-started__info">
+        <qr-code value="{{qrCodeLink}}" size="180" errorCorrectionLevel="M"></qr-code>
+        <rs-weather *ngIf="weatherLocation && !isOffline" [weatherLocation]="weatherLocation" weatherIconStyle="line"></rs-weather>
+    </div>
+</div>
