--- a/src/app/surf-event/result-view/result-view.component.scss
+++ b/src/app/surf-event/result-view/result-view.component.scss
@@ -35,7 +35,7 @@
                 background-color: $color-female;
             }
 
-            &--kids {
+            &--kid {
                 background-color: $color-kids;
             }
 
