--- a/src/app/surf-event/surf-event/surf-event.component.scss
+++ b/src/app/surf-event/surf-event/surf-event.component.scss
@@ -79,7 +79,7 @@
             padding-bottom: 0.5rem;
             @include bottom-space;
 
-            a {
+            a, button {
                 margin-right: 1rem;
             }
         }
