--- a/src/app/shared/event-card/event-card.component.scss
+++ b/src/app/shared/event-card/event-card.component.scss
@@ -47,6 +47,12 @@
         a {
             color: $color-white;
             margin-right: 1rem;
+
+            @include respond(small) {
+                mat-icon {
+                    display: none;
+                }
+            }
         }
     }
 }
