--- a/src/app/surf-event/surf-event/competition/competition.component.scss
+++ b/src/app/surf-event/surf-event/competition/competition.component.scss
@@ -31,7 +31,7 @@
             background-color: $color-female;
         }
 
-        &--kids {
+        &--kid {
             background-color: $color-kids;
         }
 
