--- a/src/app/surf-event/surf-event/surf-event.component.html
+++ b/src/app/surf-event/surf-event/surf-event.component.html
@@ -34,13 +34,23 @@
     <div class="event__divisions">
         <div *ngIf="surfEvent.divisions.length" class="event__divisions__selection">
             <h2>Competitions</h2>
-            <a mat-raised-button
-               *ngFor="let division of surfEvent.divisions"
-               class="division-{{division}}"
-               routerLink="/event/{{surfEvent.name | slugify}}-{{surfEvent.id}}/competition/{{ division }}">
-                <mat-icon>{{division}}</mat-icon>
-                {{division | titlecase}}
-            </a>
+            <ng-container *ngIf="!isUpcomingSurfEvent">
+                <a mat-raised-button
+                   *ngFor="let division of surfEvent.divisions"
+                   class="division-{{division}}"
+                   routerLink="/event/{{surfEvent.name | slugify}}-{{surfEvent.id}}/competition/{{ division }}">
+                    <mat-icon>{{division | divisionIcon}}</mat-icon>
+                    {{division | titlecase}}
+                </a>
+            </ng-container>
+            <ng-container *ngIf="isUpcomingSurfEvent">
+                <button mat-stroked-button
+                   *ngFor="let division of surfEvent.divisions" disabled
+                   class="division-{{division}} division-disabled">
+                    <mat-icon>{{division | divisionIcon}}</mat-icon>
+                    {{division | titlecase}}
+                </button>
+            </ng-container>
         </div>
         <ng-container *ngIf="enrolledRiders$ | async as enrolledRiders">
             <div class="event__divisions__riders">
