--- a/src/app/core/header/navigation/notification/notification.component.html
+++ b/src/app/core/header/navigation/notification/notification.component.html
@@ -46,7 +46,9 @@
                     <th mat-header-cell *matHeaderCellDef>Link</th>
                     <td mat-cell *matCellDef="let element">
                         <div class="dialog-container__link">
-                            <a mat-icon-button *ngIf="element.link" [routerLink]="element.link"
+                            <a mat-icon-button *ngIf="element.link"
+                               [routerLink]="element.link.split('?')[0]"
+                               [queryParams]="{highlight: element.link.split('?')[1].split('=')[1]}"
                                     tabindex="-1" (click)="markAsRead(element)" matDialogClose>
                                 <mat-icon>arrow_forward</mat-icon>
                             </a>
