--- a/src/app/riders/rider-profile/rider-timeline/time-line/time-line.component.scss
+++ b/src/app/riders/rider-profile/rider-timeline/time-line/time-line.component.scss
@@ -1,5 +1,6 @@
 @import "responsive";
 @import "variables";
+@import "mixins";
 
 $ongoing-color: #bb4444;
 $line-color: #b4bbe4;
@@ -7,25 +8,13 @@ $line-width: 0.1rem;
 $line-dash-width: 0.35rem;
 
 .container {
-    display: grid;
-    grid-template-columns: min-content minmax(400px, 40%);
-
-    @include respond(medium) {
-        grid-template-columns: min-content minmax(max-content, 80%);
-    }
-
-    @include respond(small) {
-        grid-template-columns: min-content auto;
-    }
-    align-items: stretch;
+    display: flex;
 
     &__timeline {
-        grid-column: 1 / 2;
 
         &-viewbox{
             position: relative;
             height: 100%;
-
             min-width: 60px;
 
             svg{
@@ -59,9 +48,20 @@ $line-dash-width: 0.35rem;
     }
 
     &__details {
-        grid-column: 2 / 3;
         margin: 0.5rem 0;
-        position: relative;
+        min-width: 500px;
+
+        @include respond(medium) {
+            max-width: 400px;
+            min-width: 400px;
+        }
+
+        @include respond(small) {
+            max-width: 350px;
+            min-width: 250px;
+        }
+
+
 
         &__card {
             display: flex;
@@ -106,9 +106,7 @@ $line-dash-width: 0.35rem;
         }
 
         &__points {
-            padding: .5rem 1rem;
-            border: 1px solid $color-primary;
-            border-radius: 4px;
+            @include underline-magical;
             align-self: flex-end;
         }
     }
