--- a/src/app/core/home/home.component.scss
+++ b/src/app/core/home/home.component.scss
@@ -26,7 +26,7 @@
             display: grid;
             margin-top: 0.5rem;
             margin-bottom: 0.5rem;
-            grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(400px, 400px));
             row-gap: 5rem;
             column-gap: 1rem;
 
